# AURELION

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  todo.md
.junie/: guidelines.md
src/math/: Mat4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/math/include/: Mat4.h  MathConstants.h  MatrixTransform.h  Vector2.h  Vector3.h  Vector4.h
tests/: tRenderingSetup.cpp  tVector3.cpp
